modify: 사용자 정보 수정, 삭제, 조회 기능 수정(https://www.notion.so/11a08810873880708f74d988e5f282c0)

--- a/sync-wave-service/src/main/resources/message_en.properties
+++ b/sync-wave-service/src/main/resources/message_en.properties
@@ -17,6 +17,7 @@ user.phone.not.null = The phoneNumber is missing.
 user.email.not.null = The email is missing.
 user.email.invalid = The email format is invalid.
 user.email.size = The email length exceeds the maximum character limit of 100 characters.
+user.un.auth = The account does not have the necessary permissions. Please check again.
 
 user.not.found = The user could not be found.
 user.signup.save.fail = An internal error occurred while saving user data. Please try again.
