--- a/sync-wave-service/src/main/resources/message_en.properties
+++ b/sync-wave-service/src/main/resources/message_en.properties
@@ -23,13 +23,19 @@ user.not.found = The user could not be found.
 user.signup.save.fail = An internal error occurred while saving user data. Please try again.
 user.delete.fail = An internal error occurred while deleting user data. Please try again.
 
-
 ########file########
 file.not.null = The file is missing.
 file.upload.fail = File upload failed.
 file.folder.create.fail = Failed to create file folder.
 file.name.not.null = File name is missing.
 file.delete.fail = File deletion failed.
+
+########Schedules########
+schedules.title.not.null = The Schedules title is missing.
+schedules.description.not.null = The Schedules description is missing.
+schedules.date.time.not.null = The Schedules date time is missing.
+schedules.title.size = The schedules title is not between 3 and 100 long.
+schedules.description.size = The schedules description is not between 3 and 500 long.
 
 ######common#####
 not.activated = It is not active.
