--- a/sync-wave-service/src/main/resources/messages.properties
+++ b/sync-wave-service/src/main/resources/messages.properties
@@ -31,6 +31,12 @@ file.folder.create.fail = \uD30C\uC77C\uD3F4\uB354 \uC0DD\uC131 \uC2E4\uD328\uD5
 file.name.not.null = \uD30C\uC77C\uBA85\uC774 \uB204\uB77D\uB418\uC5C8\uC2B5\uB2C8\uB2E4.
 file.delete.fail = \uD30C\uC77C\uC0AD\uC81C \uC2E4\uD328\uD558\uC600\uC2B5\uB2C8\uB2E4.
 
+########Schedules########
+schedules.title.not.null = \uC2A4\uCF00\uC974 \uC81C\uBAA9\uC774 \uB204\uB77D\uB418\uC5C8\uC2B5\uB2C8\uB2E4.
+schedules.description.not.null = \uC2A4\uCF00\uC974 \uC124\uBA85\uC774 \uB204\uB77D\uB418\uC5C8\uC2B5\uB2C8\uB2E4.
+schedules.date.time.not.null = \uC2A4\uCF00\uC974 \uC77C\uC815\uC774 \uB204\uB77D\uB418\uC5C8\uC2B5\uB2C8\uB2E4.
+schedules.title.size = \uC2A4\uCF00\uC974 \uC81C\uBAA9 \uC0AC\uC774\uC988\uAC00 1~100\uC0AC\uC774\uAC00 \uC544\uB2D9\uB2C8\uB2E4.
+schedules.description.size = \uC2A4\uCF00\uC974 \uC81C\uBAA9 \uC0AC\uC774\uC988\uAC00 1~500\uC0AC\uC774\uAC00 \uC544\uB2D9\uB2C8\uB2E4.
 
 ######common#####
 not.activated = \uD65C\uC131\uD654\uB418\uC5B4 \uC788\uC9C0 \uC54A\uC2B5\uB2C8\uB2E4.
