add: 📌 message_properties - 중복 스케쥴 메시지 추가 📌 스케쥴러 등록 관련 기능 추가

--- a/sync-wave-service/src/main/resources/message_en.properties
+++ b/sync-wave-service/src/main/resources/message_en.properties
@@ -36,6 +36,7 @@ schedules.description.not.null = The Schedules description is missing.
 schedules.date.time.not.null = The Schedules date time is missing.
 schedules.title.size = The schedules title is not between 3 and 100 long.
 schedules.description.size = The schedules description is not between 3 and 500 long.
+schedules.duplicate = A duplicate schedule exists.
 
 ######common#####
 not.activated = It is not active.
