--- a/sync-wave-service/src/main/resources/message_en.properties
+++ b/sync-wave-service/src/main/resources/message_en.properties
@@ -37,6 +37,7 @@ schedules.date.time.not.null = The Schedules date time is missing.
 schedules.title.size = The schedules title is not between 3 and 100 long.
 schedules.description.size = The schedules description is not between 3 and 500 long.
 schedules.duplicate = A duplicate schedule exists.
+schedules.data.not.found = schedule data not found.
 
 ######common#####
 not.activated = It is not active.
