--- a/sync-wave-service/src/main/resources/messages.properties
+++ b/sync-wave-service/src/main/resources/messages.properties
@@ -38,6 +38,7 @@ schedules.date.time.not.null = \uC2A4\uCF00\uC974 \uC77C\uC815\uC774 \uB204\uB77
 schedules.title.size = \uC2A4\uCF00\uC974 \uC81C\uBAA9 \uC0AC\uC774\uC988\uAC00 1~100\uC0AC\uC774\uAC00 \uC544\uB2D9\uB2C8\uB2E4.
 schedules.description.size = \uC2A4\uCF00\uC974 \uC81C\uBAA9 \uC0AC\uC774\uC988\uAC00 1~500\uC0AC\uC774\uAC00 \uC544\uB2D9\uB2C8\uB2E4.
 schedules.duplicate = \uC911\uBCF5\uB41C \uC2A4\uCF00\uC974\uC774 \uC788\uC2B5\uB2C8\uB2E4.
+schedules.data.not.found = \uC2A4\uCF00\uC974 \uB370\uC774\uD130\uAC00 \uC5C6\uC2B5\uB2C8\uB2E4.
 
 ######common#####
 not.activated = \uD65C\uC131\uD654\uB418\uC5B4 \uC788\uC9C0 \uC54A\uC2B5\uB2C8\uB2E4.
