add: 📌 스케쥴 알림 발송 스케쥴러 추가

--- a/sync-wave-batch/src/main/resources/message_en.properties
+++ b/sync-wave-batch/src/main/resources/message_en.properties
@@ -40,6 +40,10 @@ schedules.duplicate = A duplicate schedule exists.
 schedules.data.not.found = schedule data not found.
 schedules.delete.success = schedule data delete success.
 
+######alarm message#####
+alarm.slack.send.success = Slack notification sent successfully.
+alarm.slack.send.fail = Failed to send Slack notification.
+
 ######common#####
 not.activated = It is not active.
 http.status.bad.request = The request is invalid.
