--- a/sync-wave-batch/src/main/resources/messages.properties
+++ b/sync-wave-batch/src/main/resources/messages.properties
@@ -41,6 +41,10 @@ schedules.duplicate = \uC911\uBCF5\uB41C \uC2A4\uCF00\uC974\uC774 \uC788\uC2B5\u
 schedules.data.not.found = \uC2A4\uCF00\uC974 \uB370\uC774\uD130\uAC00 \uC5C6\uC2B5\uB2C8\uB2E4.
 schedules.delete.success = \uC2A4\uCF00\uC974 \uC0AD\uC81C \uC644\uB8CC\uD558\uC600\uC2B5\uB2C8\uB2E4.
 
+######alarm message#####
+alarm.slack.send.success = Slack \uC54C\uB9BC \uBC1C\uC1A1 \uC131\uACF5\uD558\uC600\uC2B5\uB2C8\uB2E4.
+alarm.slack.send.fail = Slack \uC54C\uB9BC \uBC1C\uC1A1 \uC131\uACF5\uD558\uC600\uC2B5\uB2C8\uB2E4.
+
 ######common#####
 not.activated = \uD65C\uC131\uD654\uB418\uC5B4 \uC788\uC9C0 \uC54A\uC2B5\uB2C8\uB2E4.
 http.status.bad.request = \uC694\uCCAD\uC774 \uC798\uBABB \uB418\uC5C8\uC2B5\uB2C8\uB2E4.
