modify: 📌 common에 있는 dto다시 원래 도메인으로 이동 ㄴ 공통으로 보기 힘듦

--- a/sync-wave-service/src/main/resources/message_en.properties
+++ b/sync-wave-service/src/main/resources/message_en.properties
@@ -40,6 +40,14 @@ schedules.duplicate = A duplicate schedule exists.
 schedules.data.not.found = schedule data not found.
 schedules.delete.success = schedule data delete success.
 
+########Todos########
+todo.info.not.found = Unable to find the todo information.
+todo.delete.success = todo data delete success.
+todo.task.not.null = The todo task is missing.
+todo.task.size = The size of the todo task must be between 1 and 100.
+todo.start.date.not.null = The todo startDate is missing.
+todo.due.date.not.null = The todo dueDate is missing.
+
 ######common#####
 not.activated = It is not active.
 http.status.bad.request = The request is invalid.
