--- a/sync-wave-service/src/main/resources/messages.properties
+++ b/sync-wave-service/src/main/resources/messages.properties
@@ -41,6 +41,14 @@ schedules.duplicate = \uC911\uBCF5\uB41C \uC2A4\uCF00\uC974\uC774 \uC788\uC2B5\u
 schedules.data.not.found = \uC2A4\uCF00\uC974 \uB370\uC774\uD130\uAC00 \uC5C6\uC2B5\uB2C8\uB2E4.
 schedules.delete.success = \uC2A4\uCF00\uC974 \uC0AD\uC81C \uC644\uB8CC\uD558\uC600\uC2B5\uB2C8\uB2E4.
 
+########Todos########
+todo.info.not.found = todo \uC815\uBCF4\uB97C \uCC3E\uC744 \uC218 \uC5C6\uC2B5\uB2C8\uB2E4.
+todo.delete.success = todo \uC815\uBCF4\uB97C \uC0AD\uC81C \uC644\uB8CC\uD558\uC600\uC2B5\uB2C8\uB2E4.
+todo.task.not.null = todo task\uAC00 \uB204\uB77D\uB418\uC5C8\uC2B5\uB2C8\uB2E4.
+todo.task.size = todo task\uC0AC\uC774\uC988\uAC00 1~100\uC0AC\uC774\uAC00 \uC544\uB2D9\uB2C8\uB2E4.
+todo.start.date.not.null = todo startDate\uAC00 \uB204\uB77D\uB418\uC5C8\uC2B5\uB2C8\uB2E4.
+todo.due.date.not.null = todo dueDate\uAC00 \uB204\uB77D\uB418\uC5C8\uC2B5\uB2C8\uB2E4.
+
 ######common#####
 not.activated = \uD65C\uC131\uD654\uB418\uC5B4 \uC788\uC9C0 \uC54A\uC2B5\uB2C8\uB2E4.
 http.status.bad.request = \uC694\uCCAD\uC774 \uC798\uBABB \uB418\uC5C8\uC2B5\uB2C8\uB2E4.
